fixed header size on firefox

--- a/src/components/ehs-image-section/ehs-image-section.scss
+++ b/src/components/ehs-image-section/ehs-image-section.scss
@@ -1,6 +1,7 @@
 :host {
   display: block;
   height: 300px;
+  max-height: 80vh;
   
   img {
     width: 100vw;
